Fixed a minor bug with image width being too wide

--- a/src/components/front_page.scss
+++ b/src/components/front_page.scss
@@ -61,6 +61,7 @@
 
   img {
     max-width: 500px;
+    width: 100%;
   }
 }
 
@@ -103,7 +104,7 @@ section.pricing .rukun-tetangga {
 
 .first-section {
   padding: 2rem;
-  margin: 5rem 0;
+  margin: 2.5rem 0;
 }
 
 .first-section p {
@@ -121,7 +122,7 @@ section.pricing .rukun-tetangga {
 
 .selling-point {
   padding-top: 1rem;
-  padding: 4rem 1rem 0 1rem;
+  padding: 2rem 1rem 0 1rem;
   max-width: 425px;
 }
 
